2009-06-18  Ulrich Mueller  <ulm@gentoo.org>

	* pgg-gpg.el (pgg-gpg-lookup-key-owner): Handle colon listings
	format used by GnuPG 2.0.a11.

2009-06-18  Glenn Morris  <rgm@gnu.org>

	* files.el (dir-locals-set-directory-class): Make mtime argument
	optional, since it is always unneeded in the non-file case.  (Bug#3577)

2009-06-18  Kenichi Handa  <handa@m17n.org>

	* language/korean.el ("Korean"): Fix `documentation' property of
	this language environment.

	* language/korea-util.el (korean-key-bindings): Add binding for
	key Hangul.

2009-06-17  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Comment out 2007-07-25 change adding support for Maven error
	messages; this regexp is too slow on long lines (Bug#3441).

2009-06-17  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)

	* progmodes/ruby-mode.el (ruby-parse-partial)
	(ruby-font-lock-keywords): Support overloadable negative
	operators (Bug#3587).

2009-06-17  Tiago Saboga  <tiagosaboga@gmail.com>  (tiny change)

	* files.el (save-some-buffers-action-alist): Fix last
	change (Bug#3578).

2009-06-17  Glenn Morris  <rgm@gnu.org>

	* files.el (dir-locals-set-directory-class): Fix doc typo.

2009-06-17  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (list-character-sets): Change
	"FINAL-CHAR" to "FINAL-BYTE" to follow the official terminology.
	(list-character-sets-1): Add one line explanation about
	"supplementary charset".  Make the part "Supplementary Character
	Sets" clickable.

2009-06-16  Eduard Wiebe  <usenet@pusto.de>  (tiny change)

	* international/mule-conf.el: Add cp949-2-byte, cp949.

2009-06-16  Kenichi Handa  <handa@m17n.org>

	* composite.el (compose-region): Improve the docstring.

2009-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-default-revision-granularity): Remove to let the normal
	error handling kick in (bug#3570).

2009-06-13  Chong Yidong  <cyd@stupidchicken.com>
